--- a/autourval/index.html
+++ b/autourval/index.html
@@ -120,18 +120,30 @@
 				<div class="wwcheck__part wwcheck__part_1 flex">
 					<i></i>
 					<span>Приборы</span>
+					<div class="wwcheck__info">
+						<p>Проверка даты выпуска, <br>напряжения, срока службы<br> и работоспособности</p>
+					</div>
 				</div>
 				<div class="wwcheck__part wwcheck__part_2 flex">
 					<i></i>
 					<span>Впуск</span>
+					<div class="wwcheck__info">
+						<p>Проверка даты выпуска, <br>напряжения, срока службы<br> и работоспособности</p>
+					</div>
 				</div>
 				<div class="wwcheck__part wwcheck__part_3 flex">
 					<i></i>
 					<span>Двигатель</span>
+					<div class="wwcheck__info">
+						<p>Проверка даты выпуска, <br>напряжения, срока службы<br> и работоспособности</p>
+					</div>
 				</div>
 				<div class="wwcheck__part wwcheck__part_4 flex">
 					<i></i>
 					<span>КПП</span>
+					<div class="wwcheck__info">
+						<p>Проверка даты выпуска, <br>напряжения, срока службы<br> и работоспособности</p>
+					</div>
 				</div>
 				<div class="wwcheck__part wwcheck__part_5 flex">
 					<i></i>
@@ -143,38 +155,65 @@
 				<div class="wwcheck__part wwcheck__part_6 flex">
 					<i></i>
 					<span>Турбина</span>
+					<div class="wwcheck__info">
+						<p>Проверка даты выпуска, <br>напряжения, срока службы<br> и работоспособности</p>
+					</div>
 				</div>
 				<div class="wwcheck__part wwcheck__part_7 flex">
 					<i></i>
 					<span>Юр. чистоту</span>
+					<div class="wwcheck__info">
+						<p>Проверка даты выпуска, <br>напряжения, срока службы<br> и работоспособности</p>
+					</div>
 				</div>
 				<div class="wwcheck__part wwcheck__part_8 flex">
 					<i></i>
 					<span>Тормоза</span>
+					<div class="wwcheck__info">
+						<p>Проверка даты выпуска, <br>напряжения, срока службы<br> и работоспособности</p>
+					</div>
 				</div>
 				<div class="wwcheck__part wwcheck__part_9 flex">
 					<i></i>
 					<span>Рулевое <br>управление</span>
+					<div class="wwcheck__info">
+						<p>Проверка даты выпуска, <br>напряжения, срока службы<br> и работоспособности</p>
+					</div>
 				</div>
 				<div class="wwcheck__part wwcheck__part_10 flex">
 					<i></i>
 					<span>Подвеска</span>
+					<div class="wwcheck__info">
+						<p>Проверка даты выпуска, <br>напряжения, срока службы<br> и работоспособности</p>
+					</div>
 				</div>
 				<div class="wwcheck__part wwcheck__part_11 flex">
 					<i></i>
 					<span>Колеса</span>
+					<div class="wwcheck__info">
+						<p>Проверка даты выпуска, <br>напряжения, срока службы<br> и работоспособности</p>
+					</div>
 				</div>
 				<div class="wwcheck__part wwcheck__part_12 flex">
 					<i></i>
 					<span>Выпуск</span>
+					<div class="wwcheck__info">
+						<p>Проверка даты выпуска, <br>напряжения, срока службы<br> и работоспособности</p>
+					</div>
 				</div>
 				<div class="wwcheck__part wwcheck__part_13 flex">
 					<i></i>
 					<span>Салон</span>
+					<div class="wwcheck__info">
+						<p>Проверка даты выпуска, <br>напряжения, срока службы<br> и работоспособности</p>
+					</div>
 				</div>
 				<div class="wwcheck__part wwcheck__part_14 flex">
 					<i></i>
 					<span>Кузов</span>
+					<div class="wwcheck__info">
+						<p>Проверка даты выпуска, <br>напряжения, срока службы<br> и работоспособности</p>
+					</div>
 				</div>
 			</div>
 		</div>	
@@ -416,11 +455,11 @@
 					<div class="tasks__slide flex">
 						<div class="tasks__left">
 							<div class="slider-for">
-								<img src="img/slide.jpg" alt="">
-								<img src="img/slide.jpg" alt="">
-								<img src="img/slide.jpg" alt="">
-								<img src="img/slide.jpg" alt="">
-								<img src="img/slide.jpg" alt="">
+								<a href="img/slide.jpg" data-fancybox="gallery11"><img src="img/slide.jpg" alt=""></a>
+								<a href="img/slide.jpg" data-fancybox="gallery11"><img src="img/slide.jpg" alt=""></a>
+								<a href="img/slide.jpg" data-fancybox="gallery11"><img src="img/slide.jpg" alt=""></a>
+								<a href="img/slide.jpg" data-fancybox="gallery11"><img src="img/slide.jpg" alt=""></a>
+								<a href="img/slide.jpg" data-fancybox="gallery11"><img src="img/slide.jpg" alt=""></a>
 							</div>
 							<div class="slider-nav">
 								<div style="margin: 0px 15px 0px 15px">
@@ -455,11 +494,11 @@
 					<div class="tasks__slide flex">
 						<div class="tasks__left">
 							<div class="slider-for">
-								<img src="img/slide.jpg" alt="">
-								<img src="img/slide.jpg" alt="">
-								<img src="img/slide.jpg" alt="">
-								<img src="img/slide.jpg" alt="">
-								<img src="img/slide.jpg" alt="">
+								<a href="img/slide.jpg" data-fancybox="gallery12"><img src="img/slide.jpg" alt=""></a>
+								<a href="img/slide.jpg" data-fancybox="gallery12"><img src="img/slide.jpg" alt=""></a>
+								<a href="img/slide.jpg" data-fancybox="gallery12"><img src="img/slide.jpg" alt=""></a>
+								<a href="img/slide.jpg" data-fancybox="gallery12"><img src="img/slide.jpg" alt=""></a>
+								<a href="img/slide.jpg" data-fancybox="gallery12"><img src="img/slide.jpg" alt=""></a>
 							</div>
 							<div class="slider-nav">
 								<div style="margin: 0px 15px 0px 15px">
