--- a/autourval/index.html
+++ b/autourval/index.html
@@ -240,7 +240,7 @@
 								<a href="">Подробнее</a>
 							</div>
 							<div class="serv__bott">
-								<span>от <b>1 500</b> руб.</span>
+								<span>Индивидуальный расчет</span>
 								<button class="btn modal-run">ОСТАВИТЬ ЗАЯВКУ</button>
 							</div>
 						</div>
@@ -264,7 +264,7 @@
 								<a href="">Подробнее</a>
 							</div>
 							<div class="serv__bott">
-								<span>от <b>4 500</b> руб.</span>
+								<span>Индивидуальный расчет</span>
 								<button class="btn modal-run">ОСТАВИТЬ ЗАЯВКУ</button>
 							</div>
 						</div>
@@ -288,7 +288,7 @@
 								<a href="">Подробнее</a>
 							</div>
 							<div class="serv__bott">
-								<span>от <b>10 000</b> руб.</span>
+								<span>Индивидуальный расчет</span>
 								<button class="btn modal-run">ОСТАВИТЬ ЗАЯВКУ</button>
 							</div>
 						</div>
@@ -312,7 +312,7 @@
 								<a href="">Подробнее</a>
 							</div>
 							<div class="serv__bott">
-								<span>от <b>1 000</b> руб.</span>
+								<span>Индивидуальный расчет</span>
 								<button class="btn modal-run">ОСТАВИТЬ ЗАЯВКУ</button>
 							</div>
 						</div>
@@ -337,7 +337,7 @@
 								<a href="">Подробнее</a>
 							</div>
 							<div class="serv__bott">
-								<span>от <b>7 000</b> руб.</span>
+								<span>Индивидуальный расчет</span>
 								<button class="btn modal-run">ОСТАВИТЬ ЗАЯВКУ</button>
 							</div>
 						</div>
@@ -347,25 +347,20 @@
 						<div class="serv__info flex">
 							<div class="serv__top">
 								<h3 class="serv__subtitle">Подбор нового <br>автомобиля</h3>
-								<p>Подберем автосалон от<br>
-								официального дилера, готовый<br>
-								предоставить максимально<br>
-								возможную скидку на<br>
-								автомобиль</p>
-								<p>Избавим от увеличения<br>
-								стоимости автомобиля за счет<br>
-								установки дополнительного<br>
-								оборудования</p>
-								<p>Проверим соответствие<br>
-								комплектации</p>
-								<p>Сопроводим оформление<br>
-								сделки купли-продажи</p>
-								<p>Проверим техническое<br>
-								состояние нового автомобиля</p>
+								<p>Предоставляем наши СТО
+								</p>
+								<p>Кузовные работы любого характера</p>
+								<p>Техническое обслуживание</p>
+								<p>Диагностика автомобиля</p>
+								<p>Компьютерная диагностика</p>
+								<p>Ремонт ходовой</p>
+								<p>Ремонт Тормозных систем</p>
+								<p>Ремонт Двигателя</p>
+								<p>Обслуживание АКПП</p>
 								<a href="">Подробнее</a>
 							</div>
 							<div class="serv__bott">
-								<span>от <b>19 000</b> руб.</span>
+								<span>Индивидуальный расчет</span>
 								<button class="btn modal-run">ОСТАВИТЬ ЗАЯВКУ</button>
 							</div>
 						</div>
