--- a/cheese_land/index.html
+++ b/cheese_land/index.html
@@ -37,7 +37,7 @@
 			</div>
 			<div class="section__slider">
 				<a href="" class="section__insta">
-					<img src="img/icon4.png" alt="">
+					<img src="img/icon4.svg" alt="">
 				</a>
 				<div class="cows__slider">
 					<img src="img/cows.jpg" alt="">
@@ -46,6 +46,229 @@
 				</div>
 			</div>
 		</div>	
+		<div class="about">
+			<div class="wrapper flex">
+				<div class="section__img flex">
+					<img src="img/cheese1.jpg" alt="">
+				</div>
+				<div class="section__text">
+					<h2>О нашем продукте <br> для вас</h2>
+					<div class="border border_2"></div>
+					<p>Из цельного молока племенных коров <br>
+					Экологически чистый район Ленинградской области<br>
+					Ручная работа по технологии ХIХ века<br>
+					100% Натеральный продукт<br>
+					Без консервантов <br>
+					Мы полностью уверены в качестве нашего<br>
+					сыра, так как контролируем процесс его изготовления<br>
+					на каждом этапе производства на собственной ферме <br>
+					в Выборгском районе. Прежде чем попасть к вам  на стол<br>
+					каждая головка сыра 4 месяца выдерживается 
+					в идеальных условиях
+				</p>
+				</div>
+			</div>
+		</div>
+		<div class="products">
+			<div class="wrapper flex">
+				<h2 class="title">Наша продукция</h2>
+				<div class="border border_2"></div>
+				<div class="products__item flex">
+					<div class="products__img flex">
+						<img src="img/cheese2.png" alt="">
+					</div>
+					<div class="products__info">
+						<div class="products__title flex">
+							<h3>Монтазио твердый</h3>
+							<span>Вес: 0.5кг</span>
+						</div>
+						<p class="products__text">
+							Самый популярный сыр с белой плесенью и ярким грибным ароматом. Сыр приготовлен по традиционному французскому рецепту, которому сыродел обучался несколько недель 
+							в Нормандии. Сырная масса пластичная, становится все мягче 
+							по мере выдержки.
+						</p>
+						<div class="products__more flex">
+							<span>3 500 руб</span>
+							<button>В корзину</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="products__item products__item_2 flex">
+					<div class="products__info products__info_left">
+						<div class="products__title flex">
+							<h3>Монтазио полутвердый</h3>
+							<span>Вес: 0.5кг</span>
+						</div>
+						<p class="products__text">
+							Самый популярный сыр с белой плесенью и ярким грибным ароматом. Сыр приготовлен по традиционному французскому рецепту, которому сыродел обучался несколько недель 
+							в Нормандии. Сырная масса пластичная, становится все мягче 
+							по мере выдержки.
+						</p>
+						<div class="products__more flex">
+							<span>3 500 руб</span>
+							<button>В корзину</button>
+						</div>
+					</div>
+					<div class="products__img flex">
+						<img src="img/cheese2.png" alt="">
+					</div>
+				</div>
+
+				<div class="products__item flex">
+					<div class="products__img flex">
+						<img src="img/cheese2.png" alt="">
+					</div>
+					<div class="products__info">
+						<div class="products__title flex">
+							<h3>Азиаго</h3>
+							<span>Вес: 0.5кг</span>
+						</div>
+						<p class="products__text">
+							Самый популярный сыр с белой плесенью и ярким грибным ароматом. Сыр приготовлен по традиционному французскому рецепту, которому сыродел обучался несколько недель 
+							в Нормандии. Сырная масса пластичная, становится все мягче 
+							по мере выдержки.
+						</p>
+						<div class="products__more flex">
+							<span>3 500 руб</span>
+							<button>В корзину</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="products__item products__item_2 flex">
+					<div class="products__info">
+						<div class="products__title flex">
+							<h3>Монтазио полутвердый</h3>
+							<span>Вес: 0.5кг</span>
+						</div>
+						<p class="products__text">
+							Самый популярный сыр с белой плесенью и ярким грибным ароматом. Сыр приготовлен по традиционному французскому рецепту, которому сыродел обучался несколько недель 
+							в Нормандии. Сырная масса пластичная, становится все мягче 
+							по мере выдержки.
+						</p>
+						<div class="products__more flex">
+							<span>3 500 руб</span>
+							<button>В корзину</button>
+						</div>
+					</div>
+					<div class="products__img flex">
+						<img src="img/cheese2.png" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="comments">
+			<div class="comments__slider">
+				<div class="comments__slide flex">
+					<div class="comments__quotes">
+						<img src="img/quotes.svg" alt="">
+					</div>
+					<p class="comments__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+					<div class="comments__account flex">
+						<div class="comments__img">
+							<img src="img/cat.png" alt="">
+						</div>
+						<div class="comments__info">
+							<p class="comments__name">@Алексей Фатеев </p>
+							<span>Instagram</span>
+						</div>
+					</div>
+				</div>
+				<div class="comments__slide flex">
+					<div class="comments__quotes">
+						<img src="img/quotes.svg" alt="">
+					</div>
+					<p class="comments__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+					<div class="comments__account flex">
+						<div class="comments__img">
+							<img src="img/cat.png" alt="">
+						</div>
+						<div class="comments__info">
+							<p class="comments__name">@Алексей Фатеев </p>
+							<span>Instagram</span>
+						</div>
+					</div>
+				</div>
+				<div class="comments__slide flex">
+					<div class="comments__quotes">
+						<img src="img/quotes.svg" alt="">
+					</div>
+					<p class="comments__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+					<div class="comments__account flex">
+						<div class="comments__img">
+							<img src="img/cat.png" alt="">
+						</div>
+						<div class="comments__info">
+							<p class="comments__name">@Алексей Фатеев </p>
+							<span>Instagram</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="delivery flex">
+			<div class="delivery__img flex">
+				<img src="img/delimg.jpg" alt="">
+			</div>
+			<div class="section__text">
+				<h2>Доставка и оплата</h2>
+				<div class="border border_2"></div>
+				<h3>Условия доставки заказа по Москве и области:</h3>
+				<p>При сумме заказа от 4000 руб. доставка осуществляется бесплатно. <br>
+				Доставка заказа на сумму до 4000 руб. — 350 руб.<br>
+				Доставка осуществляется с 11.00 до 20.00 без выходных дней 
+				в пределах 20 км. от МКАД. </p>
+				<h3>Самовывоз:</h3>
+				<p>Также открыта возможность самовывоза из нашего офиса по адресу Москва, 5-й Донской проезд, 19. Время самовывоза уточняйте по телефону +7 495 99 88 280</p>
+			</div>
+		</div>
+		<div class="gallery flex">
+			<h2 class="title">Галерея</h2>
+			<div class="border border_2"></div>
+			<div class="gallery__cont flex">
+				<div class="gallery__item flex">
+					<a href="img/gal1.jpg" data-fancybox="gallery">
+						<img src="img/gal1.jpg" alt="">
+					</a>
+				</div>
+				<div class="gallery__item flex">
+					<a href="img/gal2.jpg" data-fancybox="gallery">
+						<img src="img/gal2.jpg" alt="">
+					</a>
+				</div>
+				<div class="gallery__item flex">
+					<a href="img/gal3.jpg" data-fancybox="gallery">
+						<img src="img/gal3.jpg" alt="">
+					</a>
+				</div>
+				<div class="gallery__item flex">
+					<a href="img/gal4.jpg" data-fancybox="gallery">
+						<img src="img/gal4.jpg" alt="">
+					</a>
+				</div>
+				<div class="gallery__item flex">
+					<a href="img/gal5.jpg" data-fancybox="gallery">
+						<img src="img/gal5.jpg" alt="">
+					</a>
+				</div>
+				<div class="gallery__item flex">
+					<a href="img/gal6.jpg" data-fancybox="gallery">
+						<img src="img/gal6.jpg" alt="">
+					</a>
+				</div>
+				<div class="gallery__item flex">
+					<a href="img/gal7.jpg" data-fancybox="gallery">
+						<img src="img/gal7.jpg" alt="">
+					</a>
+				</div>
+				<div class="gallery__item flex">
+					<a href="img/gal8.jpg" data-fancybox="gallery">
+						<img src="img/gal8.jpg" alt="">
+					</a>
+				</div>
+			</div>
+		</div>
 	</main>	
 			
 <!-- CONTENT EOF   -->
@@ -57,6 +280,11 @@
 			<a href="" class="header__logo">
 				<img src="img/logo.png" alt="">
 			</a>
+			<div class="header__toggle">
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
 			<nav class="header__nav">
 				<ul class="flex">
 					<li><a href="">О нас</a></li>
@@ -67,16 +295,16 @@
 				</ul>
 			</nav>
 			<div class="header__soc flex">
-				<a href=""><img src="img/icon1.png" alt=""></a>
-				<a href=""><img src="img/icon2.png" alt=""></a>
-				<a href=""><img src="img/icon3.png" alt=""></a>
+				<a href=""><img src="img/icon1.svg" alt=""></a>
+				<a href=""><img src="img/icon2.svg" alt=""></a>
+				<a href=""><img src="img/icon3.svg" alt=""></a>
 			</div>
 			<div class="header__phone flex">
-				<img src="img/phone.png" alt="">
+				<img src="img/phone.svg" alt="">
 				<a href="tel:+88005005050">8-800-500-50 50</a>
 			</div>
 			<div class="header__cart">
-				<img src="img/cart.png" alt="">
+				<a href=""><img src="img/cart.svg" alt=""></a>
 				<div class="header__amount flex">
 					<span>3</span>
 				</div>
@@ -88,9 +316,18 @@
 
 <!-- BEGIN FOOTER -->	
 	
-	<footer>
-		<div class="wrapper">
-			
+	<footer class="footer">
+		<div class="wrapper flex">
+			<p class="footer__text">©  Северная сыроварня 2015 - 2017</p>
+			<div class="header__soc footer__soc flex">
+				<a href=""><img src="img/icon1.svg" alt=""></a>
+				<a href=""><img src="img/icon2.svg" alt=""></a>
+				<a href=""><img src="img/icon3.svg" alt=""></a>
+			</div>
+			<div class="header__phone footer__phone flex">
+				<img src="img/phone.svg" alt="">
+				<a href="tel:+88005005050">8-800-500-50 50</a>
+			</div>
 		</div>	
 	</footer>
 	
