--- a/cheese_land/index.html
+++ b/cheese_land/index.html
@@ -46,7 +46,7 @@
 				</div>
 			</div>
 		</div>	
-		<div class="about">
+		<div class="about" id="ex1">
 			<div class="wrapper flex">
 				<div class="section__img flex">
 					<img src="img/cheese1.jpg" alt="">
@@ -69,7 +69,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="products">
+		<div class="products" id="ex2">
 			<div class="wrapper flex">
 				<h2 class="title">Наша продукция</h2>
 				<div class="border border_2"></div>
@@ -158,7 +158,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="comments">
+		<div class="comments" id="ex3">
 			<div class="comments__slider">
 				<div class="comments__slide flex">
 					<div class="comments__quotes">
@@ -207,7 +207,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="delivery flex">
+		<div class="delivery flex" id="ex4">
 			<div class="delivery__img flex">
 				<img src="img/delimg.jpg" alt="">
 			</div>
@@ -223,7 +223,7 @@
 				<p>Также открыта возможность самовывоза из нашего офиса по адресу Москва, 5-й Донской проезд, 19. Время самовывоза уточняйте по телефону +7 495 99 88 280</p>
 			</div>
 		</div>
-		<div class="gallery flex">
+		<div class="gallery flex" id="ex5">
 			<h2 class="title">Галерея</h2>
 			<div class="border border_2"></div>
 			<div class="gallery__cont flex">
@@ -287,11 +287,11 @@
 			</div>
 			<nav class="header__nav">
 				<ul class="flex">
-					<li><a href="">О нас</a></li>
-					<li><a href="">Продукция</a></li>
-					<li><a href="">Отзывы</a></li>
-					<li><a href="">Контакты</a></li>
-					<li><a href="">Галерея</a></li>
+					<li><a href="#ex1">О нас</a></li>
+					<li><a href="#ex2">Продукция</a></li>
+					<li><a href="#ex3">Отзывы</a></li>
+					<li><a href="#ex4">Контакты</a></li>
+					<li><a href="#ex5">Галерея</a></li>
 				</ul>
 			</nav>
 			<div class="header__soc flex">
