--- a/ponchiki/index.html
+++ b/ponchiki/index.html
@@ -67,10 +67,9 @@
 					</li>
 				</ul>
 			</nav>
-			<button class="btn flex">
-				<i></i>
-				Найти кафе
-			</button>
+			<div class="btn__cont">
+				<button class="btn flex">Найти кафе</button>
+			</div>
 		</div>
 	</sidebar>
 
@@ -78,24 +77,27 @@
 		<div class="banner">
 			<div class="banner__slide flex">
 				<h2 class="banner__title">Федеральная <br> пончиковая сеть</h2>
-				<button class="btn btn_2 flex">
-					<i></i>
-					Найти ближайшее кафе
-				</button>
+				<div class="btn__cont btn__cont_2">
+					<button class="btn btn_2 flex">
+						Найти ближайшее кафе
+					</button>
+				</div>
 			</div>
 			<div class="banner__slide flex">
 				<h2 class="banner__title">Федеральная <br> пончиковая сеть</h2>
-				<button class="btn btn_2 flex">
-					<i></i>
-					Найти ближайшее кафе
-				</button>
+				<div class="btn__cont btn__cont_2">
+					<button class="btn btn_2 flex">
+						Найти ближайшее кафе
+					</button>
+				</div>
 			</div>
 			<div class="banner__slide flex">
 				<h2 class="banner__title">Федеральная <br> пончиковая сеть</h2>
-				<button class="btn btn_2 flex">
-					<i></i>
-					Найти ближайшее кафе
-				</button>
+				<div class="btn__cont btn__cont_2">
+					<button class="btn btn_2 flex">
+						Найти ближайшее кафе
+					</button>
+				</div>
 			</div>
 		</div>	
 		<div class="menu">
@@ -186,6 +188,34 @@
 						2018 года в Крым</p>
 						<span class="news__date">02.02.2018</span>
 					</a>
+					<a class="news__item">
+						<div href="" class="news__img">
+							<img src="img/news1.jpg" alt="">
+							<div class="news__plus flex">
+								<span>+</span>
+							</div>
+						</div>
+						<h3 class="news__name">Каждому пляжу в  Крыму присвоят  порядковый номер</h3>
+						<p class="news__desc">Новые нормативные требования 
+						к пользователям пляжей будут 
+						действовать в курортном сезоне 
+						2018 года в Крым</p>
+						<span class="news__date">02.02.2018</span>
+					</a>
+					<a class="news__item">
+						<div href="" class="news__img">
+							<img src="img/news2.jpg" alt="">
+							<div class="news__plus flex">
+								<span>+</span>
+							</div>
+						</div>
+						<h3 class="news__name">Каждому пляжу в  Крыму присвоят  порядковый номер</h3>
+						<p class="news__desc">Новые нормативные требования 
+						к пользователям пляжей будут 
+						действовать в курортном сезоне 
+						2018 года в Крым</p>
+						<span class="news__date">02.02.2018</span>
+					</a>
 				</div>
 			</div>
 		</div>
@@ -235,10 +265,11 @@
 					<a href=""><img src="img/soc3.png" alt=""></a>
 					<a href=""><img src="img/soc4.png" alt=""></a>
 				</div>
-				<button class="btn btn_3 flex">
-					<i></i>
-					Найти кафе
-				</button>
+				<div class="btn__cont btn__cont_2">
+					<button class="btn btn_3 flex">
+						Найти кафе
+					</button>
+				</div>
 			</div>
 		</div>	
 	</footer>
