--- a/kovka/index.html
+++ b/kovka/index.html
@@ -62,9 +62,9 @@
 		<div class="adva" id="ex1">
 			<div class="wrapper">
 				<div class="anchors anchors2 flex">
-					<a href="#anc1">Каталог</a>
+					<a href="#anc1" id="cat1">Каталог</a>
 					<a href="#anc2">Почему мы</a>
-					<a href="#anc3">Заказать</a>
+					<a href="#anc3" id="cat3">Заказать</a>
 					<a href="#anc4">Новые модели</a>
 					<a href="#anc5">Популярные модели</a>
 				</div>
@@ -311,12 +311,12 @@
 				</div>
 				<div class="topmodels__slider topmodels__slider_2">
 					<div class="topmodels__item flex">
-						<h2>КАМИННАЯ К-3</h2>
+						<h2>РАЗДВИЖНАЯ Р-6</h2>
 						<div class="topmodels__img">
-							<img src="img/prod1.jpg" alt="">
+							<img src="img/prod2.jpg" alt="">
 						</div>
 						<p class="topmodels__price">2300 <span>р/м²</span></p>
-						<button class="modal-run" data-type="1">
+						<button class="modal-run" data-type="2">
 							<a href="">Заказать</a>
 						</button>
 					</div>
@@ -473,12 +473,12 @@
 				</div>
 				<div class="topmodels__slider topmodels__slider_3">
 					<div class="topmodels__item flex">
-						<h2>КАМИННАЯ К-3</h2>
+						<h2>РАЗДВИЖНАЯ Р-6</h2>
 						<div class="topmodels__img">
-							<img src="img/prod1.jpg" alt="">
+							<img src="img/prod2.jpg" alt="">
 						</div>
 						<p class="topmodels__price">2300 <span>р/м²</span></p>
-						<button class="modal-run" data-type="1">
+						<button class="modal-run" data-type="2">
 							<a href="">Заказать</a>
 						</button>
 					</div>
@@ -635,12 +635,12 @@
 				</div>
 				<div class="topmodels__slider topmodels__slider_4">
 					<div class="topmodels__item flex">
-						<h2>КАМИННАЯ К-3</h2>
+						<h2>РАЗДВИЖНАЯ Р-6</h2>
 						<div class="topmodels__img">
-							<img src="img/prod1.jpg" alt="">
+							<img src="img/prod2.jpg" alt="">
 						</div>
 						<p class="topmodels__price">2300 <span>р/м²</span></p>
-						<button class="modal-run" data-type="1">
+						<button class="modal-run" data-type="2">
 							<a href="">Заказать</a>
 						</button>
 					</div>
@@ -797,12 +797,12 @@
 				</div>
 				<div class="topmodels__slider topmodels__slider_5">
 					<div class="topmodels__item flex">
-						<h2>КАМИННАЯ К-3</h2>
+						<h2>РАЗДВИЖНАЯ Р-6</h2>
 						<div class="topmodels__img">
-							<img src="img/prod1.jpg" alt="">
+							<img src="img/prod2.jpg" alt="">
 						</div>
 						<p class="topmodels__price">2300 <span>р/м²</span></p>
-						<button class="modal-run" data-type="1">
+						<button class="modal-run" data-type="2">
 							<a href="">Заказать</a>
 						</button>
 					</div>
@@ -1150,12 +1150,12 @@
 				</div>
 				<div class="topmodels__slider topmodels__slider_2">
 					<div class="topmodels__item flex">
-						<h2>КАМИННАЯ К-3</h2>
+						<h2>РАЗДВИЖНАЯ Р-6</h2>
 						<div class="topmodels__img">
-							<img src="img/prod1.jpg" alt="">
+							<img src="img/prod2.jpg" alt="">
 						</div>
 						<p class="topmodels__price">2300 <span>р/м²</span></p>
-						<button class="modal-run" data-type="1">
+						<button class="modal-run" data-type="2">
 							<a href="">Заказать</a>
 						</button>
 					</div>
@@ -1312,12 +1312,12 @@
 				</div>
 				<div class="topmodels__slider topmodels__slider_3">
 					<div class="topmodels__item flex">
-						<h2>КАМИННАЯ К-3</h2>
+						<h2>ДЛЯ КОНДИЦИОНЕРА РА-2</h2>
 						<div class="topmodels__img">
-							<img src="img/prod1.jpg" alt="">
+							<img src="img/prod3.jpg" alt="">
 						</div>
 						<p class="topmodels__price">2300 <span>р/м²</span></p>
-						<button class="modal-run" data-type="1">
+						<button class="modal-run" data-type="3">
 							<a href="">Заказать</a>
 						</button>
 					</div>
@@ -1474,12 +1474,12 @@
 				</div>
 				<div class="topmodels__slider topmodels__slider_4">
 					<div class="topmodels__item flex">
-						<h2>КАМИННАЯ К-3</h2>
+						<h2>ЖАЛЮЗИЙНАЯ РЖ-18</h2>
 						<div class="topmodels__img">
-							<img src="img/prod1.jpg" alt="">
+							<img src="img/prod4.jpg" alt="">
 						</div>
 						<p class="topmodels__price">2300 <span>р/м²</span></p>
-						<button class="modal-run" data-type="1">
+						<button class="modal-run" data-type="4">
 							<a href="">Заказать</a>
 						</button>
 					</div>
@@ -1636,12 +1636,12 @@
 				</div>
 				<div class="topmodels__slider topmodels__slider_5">
 					<div class="topmodels__item flex">
-						<h2>КАМИННАЯ К-3</h2>
+						<h2>РЕШЕТКА СВАРНАЯ РС-126</h2>
 						<div class="topmodels__img">
-							<img src="img/prod1.jpg" alt="">
+							<img src="img/prod5.jpg" alt="">
 						</div>
 						<p class="topmodels__price">2300 <span>р/м²</span></p>
-						<button class="modal-run" data-type="1">
+						<button class="modal-run" data-type="5">
 							<a href="">Заказать</a>
 						</button>
 					</div>
@@ -2353,7 +2353,9 @@
 		<!--Modal window end-->
 		<!--Modal window-->
 		<div class="modal-cont modal-cont-2">
-			<span class="modal-close"><i></i></span>
+			<span class="modal-close">
+				<img src="img/close.png" alt="">
+			</span>
 			<div class="banner__form">
 				<form action="" class="flex">
 					<h3>заявка на <span>услугу</span></h3>
