--- a/remont-test/index.html
+++ b/remont-test/index.html
@@ -1115,6 +1115,8 @@
 			<h3 class="modal__subtitle">Скоро, мы с вами свяжемся.</h3>
 			<img src="img/ok.png" alt="">
 		</div>
+
+		<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/C0DPdy98e4c" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 	</main>	
 			
 <!-- CONTENT EOF   -->
