--- a/fitnes-test/index.html
+++ b/fitnes-test/index.html
@@ -291,7 +291,7 @@
 						оборудования за 7 часов</p>
 						<input type="email" placeholder="Ваш e-mail">
 						<input type="text" class="phone" placeholder="Ваш телефон">
-						<input type="submit" class="banner__order" value="Получить расчёт">
+						<input type="submit" class="banner__order bhover_2" value="Получить расчёт">
 					</form>
 				</div>
 			</div>
@@ -335,7 +335,7 @@
 					десяти предложений в абзаце, что позволяет сделать текст более
 					привлекательным и живым для слухового восприятия. По своей сути
 					рыбатекст является альтернативой традиционному lorem ipsum.</p>
-					<div class="gym__btn">
+					<div class="gym__btn bhover">
 						<button>Хочу так же</button>
 					</div>
 				</div>
@@ -351,7 +351,7 @@
 					<div class="works__info">
 						<h3>Про­ек­ти­рова­ние фит­нес-цен­тра</h3>
 						<p>г. Москва, ул Полтава 09/14</p>
-						<button class="modal-run" data-id="3">Подробнее</button>
+						<button class="modal-run bhover_2" data-id="3">Подробнее</button>
 					</div>
 				</div>
 				<div class="works__item flex">
@@ -359,7 +359,15 @@
 					<div class="works__info">
 						<h3>Про­ек­ти­рова­ние фит­нес-цен­тра</h3>
 						<p>г. Москва, ул Полтава 09/14</p>
-						<button>Подробнее</button>
+						<button class="bhover_2">Подробнее</button>
+					</div>
+				</div>
+				<div class="works__item flex">
+					<img src="img/work3.jpg" alt="">
+					<div class="works__info">
+						<h3>Про­ек­ти­рова­ние фит­нес-цен­тра</h3>
+						<p>г. Москва, ул Полтава 09/14</p>
+						<button class="bhover_2">Подробнее</button>
 					</div>
 				</div>
 				<div class="works__item flex">
@@ -371,19 +379,11 @@
 					</div>
 				</div>
 				<div class="works__item flex">
-					<img src="img/work3.jpg" alt="">
-					<div class="works__info">
-						<h3>Про­ек­ти­рова­ние фит­нес-цен­тра</h3>
-						<p>г. Москва, ул Полтава 09/14</p>
-						<button>Подробнее</button>
-					</div>
-				</div>
-				<div class="works__item flex">
 					<img src="img/work2.jpg" alt="">
 					<div class="works__info">
 						<h3>Про­ек­ти­рова­ние фит­нес-цен­тра</h3>
 						<p>г. Москва, ул Полтава 09/14</p>
-						<button>Подробнее</button>
+						<button class="bhover_2">Подробнее</button>
 					</div>
 				</div>
 				<div class="works__item flex">
@@ -391,7 +391,7 @@
 					<div class="works__info">
 						<h3>Про­ек­ти­рова­ние фит­нес-цен­тра</h3>
 						<p>г. Москва, ул Полтава 09/14</p>
-						<button>Подробнее</button>
+						<button class="bhover_2">Подробнее</button>
 					</div>
 				</div>
 				<div class="works__more">
@@ -473,7 +473,7 @@
 							<input type="file">
 							<span>Прикрепить файл</span>
 						</label>
-						<input type="submit" class="banner__order" placeholder="Получить">
+						<input type="submit" class="banner__order bhover_2" placeholder="Получить">
 					</form>
 				</div>
 			</div>
@@ -512,26 +512,26 @@
 						<h3 class="calculator__title">Тип зала</h3>
 						<div class="calculator__row flex">
 							<div class="calculator__check">
-								<input type="checkbox" id="check1">
+								<input type="radio" name="radio1" id="check1">
 								<label for="check1">Эконом</label>
 							</div>
 							<div class="calculator__check">
-								<input type="checkbox" id="check2">
+								<input type="radio" name="radio1" id="check2">
 								<label for="check2">Стандарт</label>
 							</div>
 							<div class="calculator__check">
-								<input type="checkbox" id="check3">
+								<input type="radio" name="radio1" id="check3">
 								<label for="check3">Премиум</label>
 							</div>
 						</div>
 						<h3 class="calculator__title">Оборудование</h3>
 						<div class="calculator__row flex">
 							<div class="calculator__check">
-								<input type="checkbox" id="check4">
+								<input type="radio" name="radio2" id="check4">
 								<label for="check4">Новое</label>
 							</div>
-							<div class="calculator__check">
-								<input type="checkbox" id="check5">
+							<div class="calculator__check calculator__check_2">
+								<input type="radio" name="radio2" id="check5">
 								<label for="check5">Восстановленное</label>
 							</div>
 						</div>
@@ -542,7 +542,7 @@
 							<p>стоимости за <span>7 часов</span></p>
 							<input type="email" placeholder="Ваш e-mail">
 							<input type="text" class="phone" placeholder="Ваш телефон">
-							<input type="submit" class="banner__order" value="Получить расчёт">
+							<input type="submit" class="banner__order bhover_2" value="Получить расчёт">
 						</form>
 					</div>
 				</div>
@@ -556,7 +556,7 @@
 				</h3>
 				<p class="proj3d__text">при поставке оборудования <br>
 				на сумму от 1 млн. руб.</p>
-				<button class="proj3d__btn">Получить</button>
+				<button class="proj3d__btn bhover">Получить</button>
 				<div class="proj3d__cont flex">
 					<a href="img/gal1.jpg" class="proj3d__item flex" data-fancybox="gallery">
 						<img src="img/gal1.jpg" alt="">
@@ -594,7 +594,7 @@
 					<p><span>Переоснащение клубов с выкупом и заменой нынешнего
 					оборудования и увеличивает  приток новых клиентов на 1/3</span></p>
 					<div class="gym__btn gym2__btn">
-						<button>Получить консультацию</button>
+						<button class="bhover">Получить консультацию</button>
 					</div>
 				</div>
 			</div>
@@ -614,7 +614,7 @@
 							<input type="file">
 							<span>Прикрепить файл</span>
 						</label>
-						<input type="submit" class="banner__order" placeholder="Получить">
+						<input type="submit" class="banner__order bhover_2" placeholder="Получить">
 					</form>
 				</div>
 			</div>
@@ -628,53 +628,53 @@
 					<div class="rating__left flex">
 						<ul class="select1">
 							<li class="select1__item_init">
-								Приключения 1
+								Производитель 1
 							</li>
 							<li data-value="value 1" value="61000" class="select-1 select1__item">
-								Приключения 2
+								Производитель 2
 							</li>
 							<li data-value="value 2" value="54000" class="select-1 select1__item select__item_active">
-								Приключения 3
+								Производитель 3
 							</li>
 							<li data-value="value 3" value="19000" class="select-1 select1__item">
-								Приключения 4
+								Производитель 4
 							</li>
 							<li data-value="value 4" value="41000" class="select-1 select1__item">
-								Приключения 1
+								Производитель 1
 							</li>
 						</ul>
 						<ul class="select2">
 							<li class="select2__item_init">
-								Праздник
+								Тип 1
 							</li>
 							<li data-value="value 1" value="12000" class="select-2 select2__item">
-								Приключения 2
+								Тип 2
 							</li>
 							<li data-value="value 2" value="18000" class="select-2 select2__item select__item_active">
-								Приключения 3
+								Тип 3
 							</li>
 							<li data-value="value 3" value="23000" class="select-2 select2__item">
-								Приключения 4
+								Тип 4
 							</li>
 							<li data-value="value 4" value="34000" class="select-2 select2__item">
-								Праздник
+								Тип 1
 							</li>
 						</ul>
 						<ul class="select3">
 							<li class="select3__item_init">
-								Приключения 1
+								Год 1
 							</li>
 							<li data-value="value 1" value="61000" class="select-3 select3__item">
-								Приключения 2
+								Год 2
 							</li>
 							<li data-value="value 2" value="54000" class="select-3 select3__item select__item_active">
-								Приключения 3
+								Год 3
 							</li>
 							<li data-value="value 3" value="19000" class="select-3 select3__item">
-								Приключения 4
+								Год 4
 							</li>
 							<li data-value="value 4" value="41000" class="select-3 select3__item">
-								Приключения 1
+								Год 1
 							</li>
 						</ul>
 					</div>
@@ -682,7 +682,7 @@
 						<textarea placeholder="Ваш комментарий"></textarea>
 						<input type="email" placeholder="Ваш e-mail">
 						<input type="text" class="phone" placeholder="Ваш телефон">
-						<input type="submit" class="banner__order" placeholder="Получить">
+						<input type="submit" class="banner__order bhover_2" placeholder="Получить">
 					</div>
 				</form>
 			</div>
@@ -788,7 +788,7 @@
 						<p>или закажите выезд эксперта на Ваш объект</p>
 						<input type="email" placeholder="Ваш e-mail ">
 						<input type="text" class="phone" placeholder="Ваш телефон">
-						<input type="submit" class="banner__order" class="banner__order" value="Подать заявку">
+						<input type="submit" class="banner__order bhover" class="banner__order" value="Подать заявку">
 					</form>
 					<img src="img/staff5.png" alt="" class="expert__img">
 				</div>
@@ -814,7 +814,7 @@
 			и вам перезвонит наш менеджер:</h2>
 			<form class="modal__form">
 				<input type="text" class="phone" name="phone1" placeholder="Ваш телефон">
-				<input class="btn banner__order" name="sendForm1" type="submit" value="Заказать звонок">
+				<input class="btn banner__order bhover_2" name="sendForm1" type="submit" value="Заказать звонок">
 			</form>
 		</div>
 		<div class="overlay"></div>
@@ -923,7 +923,7 @@
 			<form action="" class="modal__form2 flex">
 				<input type="email" placeholder="Ваш e-mail">
 				<input type="text" class="phone" placeholder="Ваш телефон">
-				<input type="submit" class="banner__order"  value="Получить" >
+				<input type="submit" class="banner__order bhover_2"  value="Получить" >
 			</form>
 		</div>
 		<!--Modal window-->
@@ -951,16 +951,19 @@
 			</div>
 		</div>
 		<!--Modal window-->
-		<div class="modal-cont modal-thanks">
+		<!-- <div class="modal-cont modal-thanks">
 			<span class="modal-close">
 				<img src="img/close.png" alt="">
 			</span>
 			<h2 class="modal__title modal__title_2">Благодарим вас за заявку!</h2>
 			<h3 class="modal__subtitle">Скоро, мы с вами свяжемся.</h3>
 			<img src="img/ok.png" alt="">
-		</div>
+		</div> -->
 
 		<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/C0DPdy98e4c" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+		<img src="img/video.jpg" alt="" class="fixed__video fixed gender__video">
+		<img src="img/totop.png" alt="" class="totop">
 	</main>	
 			
 <!-- CONTENT EOF   -->
@@ -978,7 +981,7 @@
 			Оснащение фитнес-клубов «под ключ»</p>
 			<div class="header__info flex">
 				<a href="tel:88002000600" class="header__phone">8 800 200 06 00</a>
-				<button class="header__call modal-run" data-id="1">Получить консультацию</button>
+				<button class="header__call modal-run btn-6 bhover" data-id="1">Получить консультацию</button>
 			</div>
 		</div>	
 		<div class="header__nav">
@@ -1017,8 +1020,10 @@
 	
 	<footer class="footer">
 		<div class="wrapper flex">
-			<p class="footer__text">© Все права защищены 2018 г.</p>
-			<a href="Privacy-policy.pdf" target="_blank" class="footer__text footer__politic">Политика конфиденциальности</a>
+			<div>
+				<p class="footer__text">© Все права защищены 2018 г.</p>
+				<a href="Privacy-policy.pdf" target="_blank" class="footer__text footer__politic">Политика конфиденциальности</a>
+			</div>
 			<p class="footer__text">Разработка, поддержка и продвижение сайтов <a href="http://silverduck.net" target="_blank">SilverDuck.net</a></p>
 		</div>	
 	</footer>
