--- a/fitnes-test/thanks.html
+++ b/fitnes-test/thanks.html
@@ -22,7 +22,7 @@
 		<h2>Спасибо, Ваша заявка принята!</h2>
 		<h3>С Вами свяжется первый <br>
 		освободившийся менеджер</h3>
-		<a href="/"><button class="thanks-btn">Вернуться на сайт</button></a>
+		<a href="/"><button class="thanks-btn bhover_2">Вернуться на сайт</button></a>
 	</div>
 <body>
 	<script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>		
