--- a/fence-end/inside.html
+++ b/fence-end/inside.html
@@ -25,6 +25,9 @@
 <!-- BEGIN CONTENT -->
 
 	<main class="content">		
+		<div class="cat flex">
+			<img src="img/cat.png" alt="">
+		</div>
 		<div class="ibanner">
 			<div class="wrapper">
 				<div class="breadcrumbs">
@@ -379,6 +382,17 @@
 				</div>
 			</div>
 		</div>
+		<!--Modal window end-->
+		<div class="modal-cont modal-call">
+			<span class="modal-close">+</span>
+			<form action="" method="post" class="modal__form">
+				<h3>Заказать звонок</h3>
+				<input type="text" name="fio1" placeholder="Ваше Имя">
+				<input type="text" class="phone" name="phone1" placeholder="+7 (___) ___-__-__">
+				<button type="submit" name="sendForm1" class="btn">ОТПРАВИТЬ</button>
+			</form>
+		</div>
+		<div class="overlay"></div>
 	</main>	
 			
 <!-- CONTENT EOF   -->
@@ -401,7 +415,7 @@
 			<div class="header__main">
 				<div class="header__top flex">
 					<a href="tel:+74990000000" class="header__phone">+7 (499) 000-00-00</a>
-					<div class="callback flex">
+					<div class="callback flex modal-run">
 						<img src="img/phone.png" alt="">
 						<span>Обратный звонок</span>
 					</div>
@@ -460,7 +474,7 @@
 			<div class="footer__col flex">
 				<h3>Контакты</h3>
 				<a href="tel:+74990000000" class="phone">+7 (499) 000-00-00</a>
-				<div class="callback flex">
+				<div class="callback flex modal-run">
 					<img src="img/phone.png" alt="">
 					<span>Обратный звонок</span>
 				</div>
