--- a/fence-end/index.html
+++ b/fence-end/index.html
@@ -769,7 +769,7 @@
 <!-- BEGIN FOOTER -->	
 	
 	<footer class="footer">
-		<div class="wrapper flex">
+		<div class="wrapper">
 			<div class="footer__col flex">
 				<a href="" class="footer__logo">
 					<img src="img/logo.png" alt="">
