--- a/fence-end/index.html
+++ b/fence-end/index.html
@@ -688,26 +688,25 @@
 			</div>
 		</div>
 		<div class="map">
-			<div class="wrapper">
-				<div class="contacts">
-					<h2 class="title">контакты</h2>
-					<div class="contacts__cont flex">
-						<div class="contacts__item">
-							<h3>Адрес</h3>
-							<p>Россия, г. Москва <br>
-							мкр. Алмагуль, дом 33 а,<br>
-							офис1</p>
-							<h3>Телефон</h3>
-							<a href="tel:+74990000000" class="phone">+7 (499) 000-00-00</a>
-							<button type="submit" class="btn">обратный звонок</button>
+			<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A62ae39a81351a4c3c51b6c60f86cb6eb933445fc9f782729110afab87242b3ce&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=false"></script>
+			<div class="contacts">
+				<h2 class="title">контакты</h2>
+				<div class="contacts__cont flex">
+					<div class="contacts__item">
+						<h3>Адрес</h3>
+						<p>Россия, г. Москва <br>
+						мкр. Алмагуль, дом 33 а,<br>
+						офис1</p>
+						<h3>Телефон</h3>
+						<a href="tel:+74990000000" class="phone">+7 (499) 000-00-00</a>
+						<button type="submit" class="btn">обратный звонок</button>
 						</div>
-						<div class="contacts__item">
-							<h3>График работы</h3>
-							<p>Работаем: ежедневно <br>
-							с 8.00 до 20.00</p>
-							<h3>Электронная почта</h3>
-							<a href="mailto:youdomen@mail.ru" class="mail">youdomen@mail.ru</a>
-						</div>
+					<div class="contacts__item">
+						<h3>График работы</h3>
+						<p>Работаем: ежедневно <br>
+						с 8.00 до 20.00</p>
+						<h3>Электронная почта</h3>
+						<a href="mailto:youdomen@mail.ru" class="mail">youdomen@mail.ru</a>
 					</div>
 				</div>
 			</div>
