--- a/nevahod-test/index.html
+++ b/nevahod-test/index.html
@@ -101,6 +101,32 @@
 						</div>
 					</div>
 				</div>
+				<div class="search flex">
+					<div class="search__item search__item_1 flex">
+						<div class="search__icon">
+							<img src="img/icon1.png" alt="">
+						</div>
+						<span class="search__text">Кол-во человек</span>
+						<input type="text" value="2" class="search__input">
+						<div class="search__counter">
+							<img src="img/arrow3.png" alt="" class="search__plus">
+							<img src="img/arrow3.png" alt="" class="search__minus">
+						</div>
+					</div>
+					<div class="search__item search__item_2 flex">
+						<div class="search__icon search__icon_2">
+							<img src="img/icon2.png" alt="">
+						</div>
+						<input type="text" value="2018-07-01" class="search__input search__input_2">
+					</div>
+					<div class="search__item search__item_3 flex">
+						<span class="search__text">Экскурсия</span>
+						<div class="search__counter search__counter_2">
+							<img src="img/arrow3.png" alt="" class="search__plus">
+						</div>
+					</div>
+					<button class="search__btn">Подобрать рейс</button>
+				</div>
 			</div>
 		</div>	
 		<div class="adva">
